practica2/practica2.output
Gramática

    0 $accept: start $end

    1 start: DECLARATION comment OPEN_TAG content CLOSE_TAG comment $end
    2      | DECLARATION comment OPEN_TAG content CLOSE_TAG comment OPEN_TAG
    3      | comment OPEN_TAG content CLOSE_TAG comment $end
    4      | error

    5 comment: ε
    6        | COMMENT

    7 content: data
    8        | content data
    9        | OPEN_TAG content CLOSE_TAG text
   10        | content OPEN_TAG content CLOSE_TAG text

   11 text: ε
   12     | CONTENT

   13 data: OPEN_TAG CLOSE_TAG
   14     | CONTENT
   15     | COMMENT


Terminales con las reglas donde aparecen

    $end (0) 0 1 3
    error (256) 4
    OPEN_TAG <string> (258) 1 2 3 9 10 13
    CLOSE_TAG <string> (259) 1 2 3 9 10 13
    COMMENT <string> (260) 6 15
    DECLARATION <string> (261) 1 2
    CONTENT <string> (262) 12 14
    PLUS (263)
    MINUS (264)


No terminales con las reglas donde aparecen

    $accept (10)
        on left: 0
    start (11)
        on left: 1 2 3 4
        on right: 0
    comment (12)
        on left: 5 6
        on right: 1 2 3
    content (13)
        on left: 7 8 9 10
        on right: 1 2 3 8 9 10
    text (14)
        on left: 11 12
        on right: 9 10
    data (15)
        on left: 13 14 15
        on right: 7 8


Estado 0

    0 $accept: • start $end
    1 start: • DECLARATION comment OPEN_TAG content CLOSE_TAG comment $end
    2      | • DECLARATION comment OPEN_TAG content CLOSE_TAG comment OPEN_TAG
    3      | • comment OPEN_TAG content CLOSE_TAG comment $end
    4      | • error
    5 comment: ε •  [OPEN_TAG]
    6        | • COMMENT

    error        desplazar e ir al estado 1
    COMMENT      desplazar e ir al estado 2
    DECLARATION  desplazar e ir al estado 3

    OPEN_TAG  reduce usando la regla 5 (comment)

    start    ir al estado 4
    comment  ir al estado 5


Estado 1

    4 start: error •

    $default  reduce usando la regla 4 (start)


Estado 2

    6 comment: COMMENT •

    $default  reduce usando la regla 6 (comment)


Estado 3

    1 start: DECLARATION • comment OPEN_TAG content CLOSE_TAG comment $end
    2      | DECLARATION • comment OPEN_TAG content CLOSE_TAG comment OPEN_TAG
    5 comment: ε •  [OPEN_TAG]
    6        | • COMMENT

    COMMENT  desplazar e ir al estado 2

    $default  reduce usando la regla 5 (comment)

    comment  ir al estado 6


Estado 4

    0 $accept: start • $end

    $end  desplazar e ir al estado 7


Estado 5

    3 start: comment • OPEN_TAG content CLOSE_TAG comment $end

    OPEN_TAG  desplazar e ir al estado 8


Estado 6

    1 start: DECLARATION comment • OPEN_TAG content CLOSE_TAG comment $end
    2      | DECLARATION comment • OPEN_TAG content CLOSE_TAG comment OPEN_TAG

    OPEN_TAG  desplazar e ir al estado 9


Estado 7

    0 $accept: start $end •

    $default  aceptar


Estado 8

    3 start: comment OPEN_TAG • content CLOSE_TAG comment $end
    7 content: • data
    8        | • content data
    9        | • OPEN_TAG content CLOSE_TAG text
   10        | • content OPEN_TAG content CLOSE_TAG text
   13 data: • OPEN_TAG CLOSE_TAG
   14     | • CONTENT
   15     | • COMMENT

    OPEN_TAG  desplazar e ir al estado 10
    COMMENT   desplazar e ir al estado 11
    CONTENT   desplazar e ir al estado 12

    content  ir al estado 13
    data     ir al estado 14


Estado 9

    1 start: DECLARATION comment OPEN_TAG • content CLOSE_TAG comment $end
    2      | DECLARATION comment OPEN_TAG • content CLOSE_TAG comment OPEN_TAG
    7 content: • data
    8        | • content data
    9        | • OPEN_TAG content CLOSE_TAG text
   10        | • content OPEN_TAG content CLOSE_TAG text
   13 data: • OPEN_TAG CLOSE_TAG
   14     | • CONTENT
   15     | • COMMENT

    OPEN_TAG  desplazar e ir al estado 10
    COMMENT   desplazar e ir al estado 11
    CONTENT   desplazar e ir al estado 12

    content  ir al estado 15
    data     ir al estado 14


Estado 10

    7 content: • data
    8        | • content data
    9        | • OPEN_TAG content CLOSE_TAG text
    9        | OPEN_TAG • content CLOSE_TAG text
   10        | • content OPEN_TAG content CLOSE_TAG text
   13 data: • OPEN_TAG CLOSE_TAG
   13     | OPEN_TAG • CLOSE_TAG
   14     | • CONTENT
   15     | • COMMENT

    OPEN_TAG   desplazar e ir al estado 10
    CLOSE_TAG  desplazar e ir al estado 16
    COMMENT    desplazar e ir al estado 11
    CONTENT    desplazar e ir al estado 12

    content  ir al estado 17
    data     ir al estado 14


Estado 11

   15 data: COMMENT •

    $default  reduce usando la regla 15 (data)


Estado 12

   14 data: CONTENT •

    $default  reduce usando la regla 14 (data)


Estado 13

    3 start: comment OPEN_TAG content • CLOSE_TAG comment $end
    8 content: content • data
   10        | content • OPEN_TAG content CLOSE_TAG text
   13 data: • OPEN_TAG CLOSE_TAG
   14     | • CONTENT
   15     | • COMMENT

    OPEN_TAG   desplazar e ir al estado 18
    CLOSE_TAG  desplazar e ir al estado 19
    COMMENT    desplazar e ir al estado 11
    CONTENT    desplazar e ir al estado 12

    data  ir al estado 20


Estado 14

    7 content: data •

    $default  reduce usando la regla 7 (content)


Estado 15

    1 start: DECLARATION comment OPEN_TAG content • CLOSE_TAG comment $end
    2      | DECLARATION comment OPEN_TAG content • CLOSE_TAG comment OPEN_TAG
    8 content: content • data
   10        | content • OPEN_TAG content CLOSE_TAG text
   13 data: • OPEN_TAG CLOSE_TAG
   14     | • CONTENT
   15     | • COMMENT

    OPEN_TAG   desplazar e ir al estado 18
    CLOSE_TAG  desplazar e ir al estado 21
    COMMENT    desplazar e ir al estado 11
    CONTENT    desplazar e ir al estado 12

    data  ir al estado 20


Estado 16

   13 data: OPEN_TAG CLOSE_TAG •

    $default  reduce usando la regla 13 (data)


Estado 17

    8 content: content • data
    9        | OPEN_TAG content • CLOSE_TAG text
   10        | content • OPEN_TAG content CLOSE_TAG text
   13 data: • OPEN_TAG CLOSE_TAG
   14     | • CONTENT
   15     | • COMMENT

    OPEN_TAG   desplazar e ir al estado 18
    CLOSE_TAG  desplazar e ir al estado 22
    COMMENT    desplazar e ir al estado 11
    CONTENT    desplazar e ir al estado 12

    data  ir al estado 20


Estado 18

    7 content: • data
    8        | • content data
    9        | • OPEN_TAG content CLOSE_TAG text
   10        | • content OPEN_TAG content CLOSE_TAG text
   10        | content OPEN_TAG • content CLOSE_TAG text
   13 data: • OPEN_TAG CLOSE_TAG
   13     | OPEN_TAG • CLOSE_TAG
   14     | • CONTENT
   15     | • COMMENT

    OPEN_TAG   desplazar e ir al estado 10
    CLOSE_TAG  desplazar e ir al estado 16
    COMMENT    desplazar e ir al estado 11
    CONTENT    desplazar e ir al estado 12

    content  ir al estado 23
    data     ir al estado 14


Estado 19

    3 start: comment OPEN_TAG content CLOSE_TAG • comment $end
    5 comment: ε •  [$end]
    6        | • COMMENT

    COMMENT  desplazar e ir al estado 2

    $default  reduce usando la regla 5 (comment)

    comment  ir al estado 24


Estado 20

    8 content: content data •

    $default  reduce usando la regla 8 (content)


Estado 21

    1 start: DECLARATION comment OPEN_TAG content CLOSE_TAG • comment $end
    2      | DECLARATION comment OPEN_TAG content CLOSE_TAG • comment OPEN_TAG
    5 comment: ε •  [$end, OPEN_TAG]
    6        | • COMMENT

    COMMENT  desplazar e ir al estado 2

    $default  reduce usando la regla 5 (comment)

    comment  ir al estado 25


Estado 22

    9 content: OPEN_TAG content CLOSE_TAG • text
   11 text: ε •  [OPEN_TAG, CLOSE_TAG, COMMENT]
   12     | • CONTENT

    CONTENT  desplazar e ir al estado 26

    $default  reduce usando la regla 11 (text)

    text  ir al estado 27

    Conflict between rule 11 and token CONTENT resolved as shift (MINUS < CONTENT).


Estado 23

    8 content: content • data
   10        | content • OPEN_TAG content CLOSE_TAG text
   10        | content OPEN_TAG content • CLOSE_TAG text
   13 data: • OPEN_TAG CLOSE_TAG
   14     | • CONTENT
   15     | • COMMENT

    OPEN_TAG   desplazar e ir al estado 18
    CLOSE_TAG  desplazar e ir al estado 28
    COMMENT    desplazar e ir al estado 11
    CONTENT    desplazar e ir al estado 12

    data  ir al estado 20


Estado 24

    3 start: comment OPEN_TAG content CLOSE_TAG comment • $end

    $end  desplazar e ir al estado 29


Estado 25

    1 start: DECLARATION comment OPEN_TAG content CLOSE_TAG comment • $end
    2      | DECLARATION comment OPEN_TAG content CLOSE_TAG comment • OPEN_TAG

    $end      desplazar e ir al estado 30
    OPEN_TAG  desplazar e ir al estado 31


Estado 26

   12 text: CONTENT •

    $default  reduce usando la regla 12 (text)


Estado 27

    9 content: OPEN_TAG content CLOSE_TAG text •

    $default  reduce usando la regla 9 (content)


Estado 28

   10 content: content OPEN_TAG content CLOSE_TAG • text
   11 text: ε •  [OPEN_TAG, CLOSE_TAG, COMMENT]
   12     | • CONTENT

    CONTENT  desplazar e ir al estado 26

    $default  reduce usando la regla 11 (text)

    text  ir al estado 32

    Conflict between rule 11 and token CONTENT resolved as shift (MINUS < CONTENT).


Estado 29

    3 start: comment OPEN_TAG content CLOSE_TAG comment $end •

    $default  reduce usando la regla 3 (start)


Estado 30

    1 start: DECLARATION comment OPEN_TAG content CLOSE_TAG comment $end •

    $default  reduce usando la regla 1 (start)


Estado 31

    2 start: DECLARATION comment OPEN_TAG content CLOSE_TAG comment OPEN_TAG •

    $default  reduce usando la regla 2 (start)


Estado 32

   10 content: content OPEN_TAG content CLOSE_TAG text •

    $default  reduce usando la regla 10 (content)
